--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -13,13 +13,15 @@
     box-sizing: border-box;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: inline-flex;
+    flex-direction: column;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    justify-content: center;
 }
 
 /**/
@@ -27,7 +29,7 @@
 .row {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: inline-flex;
     -ms-flex-pack: distribute;
     justify-content: space-around;
 }
