--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -11,36 +11,53 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 form {
-    background: rgba(255, 255, 255, .3);
-    padding: 3rem;
-    height: 320px;
-    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.3);
+    padding: 4rem;
+    height: 420px;
+    border-radius: 25px;
     border-left: 1px solid rgba(255, 255, 255, .3);
     border-top: 1px solid rgba(255, 255, 255, .3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     -moz-backdrop-filter: blur(10px);
-    box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, .2);
+    box-shadow: 25px 25px 40px -1px rgba(0, 0, 0, 0.568);
     text-align: center;
 }
 
-p {
-    color: white;
-    font-weight: 500;
-    opacity: .7;
+.petitp {
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    opacity: .6;
     font-size: 1.4rem;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
 }
 
 a {
     text-decoration: none;
-    color: #ddd;
-    font-size: 12px;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: 700;
+    text-decoration: underline;
+
 }
+
+.buttonlogin {
+    border: none;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+    font-weight: 700;
+    opacity: .6;
+    height: 50px;
+    width: 140px;
+}
+
 
 a:hover {
     text-shadow: 2px 2px 6px #00000040;
