--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -47,7 +47,7 @@
 }
 
 .headerContainer button:hover {
-    background-color: #440303;
+    background-color: #e60000;
     cursor: pointer;
     transition: 0.3s ease-in;
 }
