--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -4,52 +4,35 @@
 }
 
 
-/* Conflit avec mon css page d'accueil */
 .container {
-    width: 100%;
-    height: 100vh;
-    padding: 20px 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: inline-flex;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    width: 80%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    justify-content: center;
-}
-
-/**/
-
-.row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: inline-flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
 }
 
 .card {
     -webkit-transition: ease all .3s;
     transition: ease all .3s;
     width: 400px;
+    height: auto;
+    margin: 15px;
 }
 
 .warpper {
     margin: 10px 10px 10px;
     padding-top: 300px;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    position: relative;
     -webkit-box-shadow: 0 0 20px 10px rgba(25, 25, 25, 0.1);
     box-shadow: 0 0 20px 10px rgb(117, 112, 112);
     -webkit-transition: ease all .3s;
     transition: ease all .3s;
+}
+
+.id {
+    display: none;
 }
 
 .warpper:hover {
@@ -59,27 +42,6 @@
 
 .warpper:hover .card_img {
     height: 350px;
-}
-
-.warpper .heart {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 1;
-    width: 25px;
-    height: 25px;
-    color: #fff;
-}
-
-.warpper .heart svg,
-.warpper .heart path,
-.warpper .heart circle {
-    stroke: currentColor;
-    fill: transparent;
-}
-
-.warpper .heart:hover {
-    cursor: pointer;
 }
 
 .color_bg {
@@ -148,7 +110,7 @@
     margin-top: 15px;
 }
 
-.priceGroup {
+.refGroup {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -164,13 +126,13 @@
     flex-direction: column;
 }
 
-.priceGroup .price {
+.refGroup .ref {
     font-size: 18px;
     color: #000;
     text-align: left;
 }
 
-.priceGroup .price.newPrice {
+.refGroup .ref.newRef {
     color: #000;
     font-size: 25px;
     font-weight: 800;
